tests/baselines/reference/alwaysStrictModule.errors.txt
alwaysStrictModule.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


==== alwaysStrictModule.ts (1 errors) ====
    namespace M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }